--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -401,8 +401,10 @@
 			       </div> 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
- <li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"></span> Do not deduct CPP contributions if your employee has <strong>reached</strong> the maximum</li>
+<li class="cnjnctn-col"><p>
+   <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
+<p> Refer to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
+
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum</li>
 </ul>
@@ -573,8 +575,10 @@
 
 	 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
-<li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"></span> Do not deduct CPP contributions if your employee has <strong>reached</strong> the maximum</li>
+<li class="cnjnctn-col"><p>
+   <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
+<p> Refer to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
+
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum</li>
 </ul>
@@ -842,8 +846,10 @@
                           <p>  <div data-ajax-replace="#ajax-detmax"></div></p>
                             <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
-<li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"></span> Do not deduct CPP contributions if your employee has <strong>reached</strong> the maximum</li>
+<li class="cnjnctn-col"><p>
+   <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
+<p> Refer to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
+
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum</li>
 </ul>
@@ -976,8 +982,10 @@
                                <div data-ajax-replace="#ajax-detmax"></div>
 				     <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
-<li class="cnjnctn-col">
-   <span class="fas fa-ban text-danger fa-lg"></span> Do not deduct CPP contributions if your employee has <strong>reached</strong> the maximum</li>
+<li class="cnjnctn-col"><p>
+   <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
+<p> Refer to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
+
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum</li>
 </ul>
