--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -238,13 +238,13 @@
                                        <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                        <span class="far fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span>  <span class="mrgn-tp-0 text-muted h5">$100 is the amount Joseph contributed for the year to date <strong>(in his employment with you)</strong></span>
+                                       </span>  <span class="mrgn-tp-0 text-muted h5">$100 is the amount for Joseph CPP2 contribution to date for the year <strong>in his employment with you</strong></span>
                                        <div class="mrgn-tp-md"></div>
                                     </li>
                                     <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                        <span class="fas fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">$TBD is the maximum CPP2 amount you can deduct 
+                                       </span> <span class="mrgn-tp-0 text-muted h5">$TBD is the the maximum CPP2 contribution that you can deduct from Joseph's pay for the rest of the year 
                                        </span></span> 
                                     </li>
                                  </ul>
@@ -287,7 +287,7 @@
  <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> Maximum pensionable earnings after prorating
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> Additional maximum pensionable earnings after prorating
                                     </span></span></li>
 
  <li class="brdr-bttm">
@@ -307,7 +307,7 @@
                                     <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span>  <span class="mrgn-tp-0 text-muted h5"> Employee's contributions to date for the year in their <strong>employment with you</strong></span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> Employee's CPP2 contributions to date for the year in their employment with you</span>
                                     <div class="mrgn-tp-md"></div>
                                  </li>
                                  <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -375,7 +375,7 @@
                                     <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span>  <span class="mrgn-tp-0 text-muted h5"> $100.00 is Joseph's contribution to date for the year in his <strong> employment with you</strong></span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> $100 is the amount for Joseph CPP2 contribution to date for the year <strong>in his employment with you</strong></span>
                                     <div class="mrgn-tp-md"></div>
                                  </li>
                                  <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -385,7 +385,7 @@
                                     </span></span> </li>
 
 </ul> 			
-<p><strong>No</strong> CPP2 contributions should be deducted <strong>after the end of February 2023</strong>.</p> 	
+<p><strong>No</strong> CPP2 contributions should be deducted <strong>after the end of February 2024</strong>.</p> 	
 </details> 
 							 
 							</details> 
@@ -485,10 +485,10 @@
          <p>Use the amount that applies to your situation to calculate step 7:</p>
           <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-md">
 <li class="cnjnctn-col">
-   <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 5 is less</strong> than step 2, <strong>withhold the amount from step 5</strong></li>
+   <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 6 is less</strong> than step 3, <strong>withhold the amount from step 6</strong></li>
  
   <li class="cnjnctn-col">
-    <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 5 is greater</strong> than step 2, <strong>withhold the amount from step 2</strong></li>
+    <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 6 is greater</strong> than step 3, <strong>withhold the amount from step 3</strong></li>
  
 </ul>
                                  
@@ -499,7 +499,7 @@
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span><span class="mrgn-tp-0 text-muted h5"> CPP2 contributions you have to withhold from your employee (step 6)</span> 
+                                 </span><span class="mrgn-tp-0 text-muted h5"> CPP2 contributions you have to withhold from your employee (step 7)</span> 
                               </li>
                               <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
@@ -524,7 +524,7 @@
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> $40.40 is Joseph's CPP2 contributions you have to withhold (step 6)</span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> $40.40 is Joseph's CPP2 contributions you have to withhold (step 7)</span> 
                                  </li>
                                  <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
