--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -403,7 +403,7 @@
   
 <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
-<p> Refer to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
 
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum</li>
@@ -577,7 +577,7 @@
   
 <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
-<p> Refer to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
 
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum</li>
@@ -848,7 +848,7 @@
   
 <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
-<p> Refer to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
 
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum</li>
@@ -984,7 +984,7 @@
   
 <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>reached</strong> the <strong>first</strong> maximum. </p>
-<p> Refer to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp2.html">Calculate second (CPP2) contributions deductions</a></p> </li>
 
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>not reached</strong> the maximum</li>
