--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -267,7 +267,7 @@
              
                <li>Webinar: <a href="https://www.canada.ca/en/revenue-agency/news/cra-multimedia-library/businesses-video-gallery/canada-pension-plan-enhancement.html">Enhanced CPP &amp; You</a> | <span class="far fa-clock text-muted mrgn-rght-sm"></span>&nbsp;45 minutes </li>
             </ul>
-            <h3 id="h_8_3">Legislative references</h3>
+            <h3 id="h_8_3">Legislation</h3>
           
 <div class="row">
 <div class="col-xs-12">
