--- a/payroll/calculate/when/learnei.html
+++ b/payroll/calculate/when/learnei.html
@@ -259,7 +259,7 @@
               
             </ul>
 
-             <h3 id="h_8_3">Legislative references</h3>
+             <h3 id="h_8_3">Legislation</h3>
           
 <div class="row">
 <div class="col-xs-12">
