--- a/payroll/calculate/when/learnit.html
+++ b/payroll/calculate/when/learnit.html
@@ -221,7 +221,7 @@
             
 
  <h2 id="h_12"> References</h2>
-                 <h3 id="h_8_3">Legislative references</h3>
+                 <h3 id="h_8_3">Legislation</h3>
           
 <div class="row">
 <div class="col-xs-12">
