--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -190,14 +190,14 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
  <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>not reached</strong> the <strong>first</strong> maximum. </p>
-<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp.html">Calculate CPP contributions deductions</a></p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp.html#step3a">Calculate CPP contributions deductions</a></p> </li>
 <li class="cnjnctn-col">
   <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>reached</strong> the first maximum</li>
 </ul>
 </li>
 
 <li>
-<h4>Determine if your employee reached the CPP2 maximum contribution</h4>                          
+<h4 id="step3a">Determine if your employee reached the CPP2 maximum contribution</h4>                          
 <div id="ajax-detmax2">           
 <p>Use the applicable calculation depending if your employee is pensionable for the full year or if your employee is pensionable <a href="#stop1" aria-controls="mid-screen" class="overlay-lnk" role="button">only for part of the year (prorate)&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
 <h5>Employee has more than one employer</h5>
@@ -558,14 +558,14 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
  <li class="cnjnctn-col"><p>
    <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>not reached</strong> the <strong>first</strong> maximum. </p>
-<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp.html">Calculate CPP contributions deductions</a></p> </li>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp.html#step2b">Calculate CPP contributions deductions</a></p> </li>
 <li class="cnjnctn-col">
   <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>reached</strong> the first maximum</li>
 </ul>
 </li>
 	                           
                              <li>
-				<h4>Determine if your employee reached the CPP2 maximum contribution</h4>
+				<h4 id="step2b">Determine if your employee reached the CPP2 maximum contribution</h4>
                                <div data-ajax-replace="#ajax-detmax2"></div>
                          </li>
                         						     
