--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -998,7 +998,7 @@
  
             <h2 id="h_5">References</h2>
 
-<h3 id="h_5_1">Related topics</h3>
+<h3 id="h_5_1">Related</h3>
  <ul>
              
                <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-3.html">Administration of the Canada Pension Plan and the Employment Insurance Act</a> </li>
