--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -167,7 +167,7 @@
                                     <div class="col-md-5">
                                        <h3 class="mrgn-tp-sm text-muted h4">Use when</h3>
                                        <ul class="fa-ul">
-                                          <li><span class="fas fa-check text-success fa-li fa-lg"></span> The payment is for regular employment income or was made with regular pay for one of the common or uncommon pay periods for which tables are provided</li>
+                                          <li><span class="fas fa-check text-success fa-li fa-lg"></span> The payment is for remuneration paid in one of the common or uncommon pay periods for which tables are provided</li>
                                           <li><span class="fas fa-check text-success fa-li fa-lg"></span> You received Form TD1-IN (in addition to the TD1) from your employee: <strong>only use these tables on the portion of their income which is taxable</strong></li>
                                        </ul>
                                     </div>
@@ -546,7 +546,7 @@
 
                 <details id="tab-mnl" >
                      <summary>All payments (manual calculation)</summary>
- <p class="mrgn-tp-md">You can use the manual calculation method to calculate the CPP2 contribution that must be withheld for all <strong>regular payments</strong> made to your employees in a pay period without using the CPP2 tables. </p>		  	
+ <p class="mrgn-tp-md">You can use the manual calculation method to calculate the CPP2 contribution that must be withheld for all payments made to your employees in a pay period without using the CPP2 tables. </p>		  	
   
                    
                      <h3 class="mrgn-tp-md">Steps</h3>
