--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -201,6 +201,7 @@
                                     </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s taxable benefits and allowances for the year to date</span>
                                     <div class="mrgn-tp-md"></div>
                                  </li>
+				  <li>      
                                     <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
@@ -217,7 +218,9 @@
                                  <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the employee’s pensionable earnings above the first maximum pensionable earnings ceiling                                    </span></span> </li></ul>
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the employee’s pensionable earnings above the first maximum pensionable earnings ceiling     
+                                 </span></span> </li>
+</ul>
 
 	<details class="mrgn-tp-md">
                                  <summary>Calculation example</summary>
