--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -184,7 +184,7 @@
                           
                         </li>
   
-<li><h4>Determine if your employee reached the first maximum earnings limit</h4>                          
+<li><h4>Determine if your employee reached the maximum earnings limit</h4>                          
       
            <div id="ajax-detmaxcpp2">             
                               <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
