--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -224,8 +224,42 @@
 
 	<details class="mrgn-tp-md">
                                  <summary>Calculation example</summary>
-<p>Add scenario here </p>
-                                
+<p>Joseph receives a biweekly salary of $5,000 and $500 in taxable benefits per pay period. He has been paid for 13 pay periods so far in 2024 ($65,000 and $6,500, to a total of $71,500). All of his earnings are pensionable and he is pensionable for the full year of 2024. </p>
+     <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
+                                 <li><span class="fa-stack text-success">
+                                    <span class="far fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                    </span><span class="mrgn-tp-0 text-muted h5"> $65,000 is Joseph's gross pay for the year to date</span> 
+                                 </li>
+		   <li >
+			      <li >
+                                    <span class="fas  fa-li"><span class="fas fa-plus"></span> <span class="wb-inv">plus</span></span> <span class="fa-stack text-success">
+                                    <span class="far fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> $6,500 is Joseph's taxable benefits for the year to date</span>
+                                    <div class="mrgn-tp-md"></div>
+                                 </li>
+				  <li>      
+                                    <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
+                                    <span class="far fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> $0 because all of Joseph's earnings require CPP contributions</span>
+                                    <div class="mrgn-tp-md"></div>
+                                 </li>
+                                 <li class="brdr-bttm">
+                                    <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
+                                    <span class="far fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> $TBD is Joseph’s maximum annual pensionable earnings</span>
+                                    <div class="mrgn-tp-md"></div>
+                                 </li>
+                                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
+                                    <span class="fas fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> $TBD is Joseph's pensionable earnings above the first maximum pensionable earnings ceiling   
+                                 </span></span> </li>
+</ul>
+     <p>   You must continue to calculate Joseph's CPP2 contributions because the amount is <strong>positive</strong>.    </p>                   
                               </details>
                     </div>             
                               
