--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -224,7 +224,7 @@
 
 	<details class="mrgn-tp-md">
                                  <summary>Calculation example</summary>
-<p>Joseph receives a biweekly salary of $5,000 and $500 in taxable benefits per pay period. He has been paid for 13 pay periods so far in 2024 ($65,000 and $6,500, to a total of $71,500). All of his earnings are pensionable and he is pensionable for the full year of 2024. </p>
+<p>Joseph receives a biweekly salary of $5,000 and $500 in taxable benefits per pay period. You have paid him for 13 pay periods so far in 2024 ($65,000 and $6,500, to a total of $71,500). All of his earnings are pensionable and he is pensionable for the full year of 2024. </p>
      <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
