--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -840,11 +840,19 @@
   	<li>
 	<h4>Calculate the amount of pensionable earnings for the period of employment</h4>      
        <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
-                              <li><span class="fa-stack text-success">
-                                 <span class="far fa-circle fa-stack-2x"></span>
-                                 <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span><span class="mrgn-tp-0 text-muted h5"> Employee’s total salary, wages benefits, and allowances for the total period which will be included in box 14 of their T4 slip</span> 
-                              </li>
+                            <li><span class="fa-stack text-success">
+                                    <span class="far fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                    </span><span class="mrgn-tp-0 text-muted h5"> Employee’s gross pay for the total period which will be included in box 14 of their T4 slip </span> 
+                                 </li>
+		   <li >
+			      <li >
+                                    <span class="fas  fa-li"><span class="fas fa-plus"></span> <span class="wb-inv">plus</span></span> <span class="fa-stack text-success">
+                                    <span class="far fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s taxable benefits and allowances for the total period which will be included in box 14 of their T4 slip</span>
+                                    <div class="mrgn-tp-md"></div>
+                                 </li>
 
                               <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
