--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -132,7 +132,7 @@
                <li><a href="#h_5">References</a></li>
             </ul>
             <h2 id="h_2">Calculation methods</h2>
-<p><span class="fas fa-bullhorn fa-lg text-muted"></span> <strong>Reminder:</strong> There are <a href="method.html#h_1">online calculators</a> that will calculate the CPP deductions for you.</p>
+<p><span class="fas fa-bullhorn fa-lg text-muted"></span> <strong>Reminder:</strong> There are <a href="index.html#h_1">online calculators</a> that will calculate the CPP deductions for you.</p>
 
 	<p>Calculate CPP deductions based on the type of payment:</p>
             <ul class="mrgn-bttm-lg">
