--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -1221,15 +1221,19 @@
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s non-pensionable earnings. These are earnings:<ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
-
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s non-pensionable earnings. 
+				<details class="mrgn-bttm-md"><summary>What are non-pensionable earnings</summary>
+				<p>Non-pensionable earnings are:</p>
+					<ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
 				<li>Received before and including the month they turned 18</li>
 				<li>Received after the month they turned 70</li>
 				<li>Received after the effective date of their completed and signed Form CPT30 to elect to stop contributing to the CPP</li>
 				<li>Received before and including the month where the employee provided you a completed and signed Form CPT30 to start contributing to the CPP</li>
 				<li>Received while the employee is considered to be disabled under the CPP or QPP</li>
 				<li>From employment, benefits, and payments from which you do not deduct CPP</li>
-				</ul></span>
+				</ul>
+				</details>
+				</span>
           
                               </li>
 
