--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -1221,7 +1221,7 @@
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s non-pensionable earnings. 
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s non-pensionable earnings 
 				<details class="mrgn-bttm-md"><summary>What are non-pensionable earnings</summary>
 				<p>Non-pensionable earnings are:</p>
 					<ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
