--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -100,7 +100,7 @@
                <ul>
                   <li><a href="#h-1">Eligibility checklist</a></li>
 		       <ul>                 
-			       <li><a href="#h-2">If an individual dies</a></li> </ul>
+			       <li><a href="#h-1-1">If an individual dies</a></li> </ul>
  <li><a href="#h-3">Sharing renovation costs</a></li>
                   <li><a href="#h-4">Examples of situations that do and do not qualify</a></li>
                </ul>
@@ -237,7 +237,7 @@
                 </section>
 	   
 
-	   <h2 id="h-2">If an individual dies</h2>
+	   <h3 id="h-1-1">If an individual dies</h3>
 	      <p>If an <strong>eligible individual</strong> or <strong>qualifying individual</strong> dies, there are special rules that let you maintain access to this credit. For the MHRTC, the deceased individual is considered:
 	     <ul>
 <li>A resident of Canada from the time of death until the end of the year if they were resident in Canada immediately before they died</li>
