--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -237,7 +237,7 @@
                 </section>
 	   
 
-	   <h3 id="h-1-1">If an individual dies</h3>
+	   <h3 id="h-1-1">If an individual ddies</h3>
 	      <p>If an <strong>eligible individual</strong> or <strong>qualifying individual</strong> dies, there are special rules that let you maintain access to this credit. For the MHRTC, the deceased individual is considered:
 	     <ul>
 <li>A resident of Canada from the time of death until the end of the year if they were resident in Canada immediately before they died</li>
