--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -240,7 +240,7 @@
                                  <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the amount to use to determine if the exceeded the first maximum annual pensionable earnings ceiling
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> A positive amount confirms your employee exceeded the first maximum annual pensionable earnings ceiling
                                  </span></span> </li>
 </ul>
 
