--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -698,11 +698,10 @@
   <p>  <div data-ajax-replace="#ajax-detmaxcpp2"></div></p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
- <li class="cnjnctn-col"><p>
-   <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if your employee has <strong>not reached</strong> the <strong>first</strong> maximum. </p>
-<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp.html#step2b">Calculate CPP contributions deductions</a></p> </li>
+ <li class="cnjnctn-col"><p>   <span class="fas fa-ban text-danger fa-lg"></span> Do not continue to next step if the amount is <strong>zero or negative</strong>. </p>
+<p>You <strong>must</strong> continue to: <a href="/cra-arc/payroll/calculate/how/cpp.html#step3a">Calculate CPP contributions deductions</a></p> </li>
 <li class="cnjnctn-col">
-  <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if your employee has <strong>reached</strong> the first maximum</li>
+  <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if the amount is <strong>positive</strong> </li>
 </ul>
 </li>
 	                           
