--- a/sred/scientific-research-experimental-development-tax-incentive-program/support.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support.html
@@ -86,11 +86,11 @@
 <li><a href="#h3">After you submit your claim</a></li>
 </ul> 
 	
-<h2 id="h1">Before you submit a claim</h2>
+<h2 id="h1">Before you submit your claim</h2>
 
 <h3><a href="support/person-information-seminars.html">SR&amp;ED webinars</a></h3>
 <p>SR&amp;ED information webinars, provided in English and French, can give a general overview of the SR&amp;ED program, including eligibility criteria, allowable expenditures, and how to prepare a claim for SR&amp;ED tax incentives.  </p>
-	<h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/self-assessment-learning-tool.html">Self-Assessment Learning Tool (SALT)</a></h3>
+	<h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/self-assessment-learning-tool.html">Self-Assessment and Learning Tool (SALT)</a></h3>
 <p>This online self-assessment tool helps you determine if your work is eligible for SR&amp;ED tax incentives and what information you need to complete your claim. It can also estimate the investment tax credit (ITC) you may be able to get.</p>
 <h3><a href="support/claim-consultation.html">Pre-claim consulation</a></h3>
 <p>The Pre-claim consultation service can help you identify if there is SR&amp;ED work in any of your projects before you submit a claim for SR&amp;ED tax incentives.</p>
@@ -101,7 +101,7 @@
 <h3><a href="contact-us.html">Contact us</a></h3>
 <p>Call us if you have any questions about the SR&amp;ED program, including eligibility, calculating expenditures or an investment tax credit, or submitting your claim.</p>
 	
-<h2 id="h3">After you submit a claim</h2>
+<h2 id="h3">After you submit your claim</h2>
 <h3><a href="support/first-time-claimant-advisory-service.html">First-Time Claimant Advisory Service (FTCAS)</a></h3>
 <p>The First-Time Claimant Advisory Service (FTCAS) is a mandatory service that provides selected SR&amp;ED claimants with recommendations and guidance for future claims.</p>
 	<h3><a href="support/virtual-service-visit.html">SR&amp;ED service visit</a></h3>
