--- a/payroll/calculate/benefit/parking.html
+++ b/payroll/calculate/benefit/parking.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Parking - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Parking expenses - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -86,7 +86,7 @@
 			<a href="what.html#gc-document-nav" class="visible-xs visible-sm">What is a taxable benefit</a>
       </li>
 	  <li>
-      <a href="parking.html" class="active" aria-current="page">Parking</a>
+      <a href="parking.html" class="active" aria-current="page">Parking expenses</a>
     </li>
 	  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -274,7 +274,7 @@
     
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Parking</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Parking expenses</h1>
 
 <div class="alert alert-warning">
 <p>Content has been updated for clarity, completeness and plain language.</p> <p>The changes identified by the tags are effective January 1, 2022 and is identified with:</p><ul><li><span class="label label-info">Update to CRA administrative policy</span></li><li><span class="label label-warning">New CRA administrative policy</span></li></ul>
@@ -303,17 +303,19 @@
 
 <h2 id="h_1">Determine if a benefit is taxable</h2>
 <p> Generally, parking you provide or reimburse to your employees is a taxable benefit. This includes situations where you provide parking to your employee at a cost that is less than the fair market value (FMV) of the parking space.</p>
-<details class="mrgn-bttm-md"><summary>What is "the fair market value (FMV) of the parking space"</summary>
+<details class="mrgn-bttm-md"><summary>What is the fair market value (FMV) of the parking space</summary>
 <div id="ajax-fmv">
 	<p>FMV is the highest price that can be obtained in an open market between an informed and willing buyer and an informed and willing seller who are dealing at arm's length.</p>
 <p>Generally, the FMV of a parking spot is the price that could be reasonably charged for the use of that spot in an open market (that is, the market price for a similar spot in the surrounding area). Normally, the cost to the employer is not a factor in determining the value of the benefit. For example, where the employer owns the lot, the value would be based on the FMV, not the employer's cost. </p>
-<h3>When to reassess the FMV</h3>
-<p>Generally, you should reassess the FMV of the parking benefit when there is a significant change to the market for parking in the area that may impact the FMV.</p>
-<p>The CRA suggests you research the parking costs based on the following factors:</p>
+<h3>When to re-evaluate the FMV</h3>
+<p>Generally, you should re-evaluate the FMV of the parking benefit when there is a significant change to the market for parking in the area that may impact the FMV.</p>
+<p>The CRA generally suggests you research the value of the parking based on the following factors:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
   <li class="cnjnctn-col">limited to the same area as the parking provided</li>
   <li class="cnjnctn-col">to comparable parking spots to the one being provided to your employee</li>
 </ul>
+<p>You must consider <strong>all of the facts</strong> relevant to your employee's situation to determine the FMV of the parking expense.</p>
+<p>This determination must be done based on a review of the facts in each specific situation.</p>
 		</div>
 </details>
 <p>Depending on your situation, the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a> makes an exemption for parking you provide or reimburse. If the CRA's administrative policy applies, the benefit is not taxable. </p>		 
@@ -348,18 +350,18 @@
 
 	<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
   <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">Includes</h3>
+    <h3 class="mrgn-tp-sm text-muted h4">Business purposes</h3>
 	
         <ul class="fa-ul">
 		<li><span class="fas fa-check text-success fa-li"></span> Parking provided at other branches of the employer's business around the city where the employee regularly has to leave their home branch to conduct the employer's business </li>
 <li><span class="fas fa-check text-success fa-li"></span> Parking cost reimbursed where the employee makes a service call to a client of the employer </li>
 <li><span class="fas fa-check text-success fa-li"></span> Parking at the parking lot of the employer where the employee uses their vehicle four days a week to visit different worksites of the employer </li>
-<li><span class="fas fa-check text-success fa-li"></span> Parking provided when an employee is working in a management position and is required to visit different work locations as operations require </li>
+<li><span class="fas fa-check text-success fa-li"></span> Parking provided when an employee is working in a management position and is required to visit different work locations</li>
 
                         </ul>
   </li>
   <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">Does not include</h3>
+    <h3 class="mrgn-tp-sm text-muted h4">Not for business purposes</h3>
      <ul class="fa-ul">
                       <li><span class="fas fa-times text-danger  fa-li"></span> Parking at the parking lot of the employer where it relates to driving from the employee's home to the office where they work and back and their job does not require them to regularly use their vehicle for employment duties </li>
 <li><span class="fas fa-times text-danger  fa-li"></span> Parking to facilitate working irregular or extended hours </li>
@@ -386,7 +388,7 @@
 
 <p> Under the CRA's administrative policy, if you provide parking at a shopping centre or industrial park, the benefit is <strong>not</strong> taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and  cnjnctn-md">
-  <li class="cnjnctn-col">Parking lot open to both employees and the public </li>
+  <li class="cnjnctn-col">Parking lot is open to both employees and the public </li>
 <li class="cnjnctn-col">Parking spaces are available free of charge </li>
 <li class="cnjnctn-col">Parking spaces are not assigned to employees </li>
 </ul>
@@ -569,9 +571,9 @@
 <dd>Value of any benefit is to be included as income from office or employment </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-1.html#s-6ss-(1)ID0EP5A">ITA: 6(1)(b)</a> </dt>
 <dd>Allowance for any purpose </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont">CPP: 12(1)</a> </dt>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#h-167967:~:text=Marginal%20note%3A-,Amount%20of%20contributory%20salary%20and%20wages,-12%C2%A0(1">CPP: 12(1)</a> </dt>
 <dd>Amount of contributory salary and wages </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/E-15/page-67.html#s-173">ETA: 173</a> </dt>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/E-15/page-42.html#h-191350:~:text=33%2C%20s.%20115-,Taxable%20Benefits,-Marginal%20note%3A">ETA: 173</a> </dt>
 <dd>Taxable benefit is considered a supply for GST/HST purposes </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-1.html">IECPR: 2(1)</a></dt>
 <dd>Amount of Insurable Earnings</dd>
