--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -234,12 +234,12 @@
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
                                     </span>  <span class="mrgn-tp-0 text-muted h5">Employee's <a href="#cpp-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #cpprate", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate-tbl>tbody>tr>td:nth-child(2)", "class": "info"}]'>maximum pensionable earnings&nbsp;<span class="far fa-question-circle"></span></a> for the year to date
- <details><summary>How to calculate for the year to date (prorate)</summary>  
+ <details><summary>How to calculate prorated maximum pensionable earnings</summary>  
     <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                             <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> Employee's <a href="#cpp-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #cpprate", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate-tbl>tbody>tr>td:nth-child(2)", "class": "info"}]'>maximum annual pensionable earnings&nbsp;<span class="far fa-question-circle"></span></a></span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"><a href="#cpp-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #cpprate", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate-tbl>tbody>tr>td:nth-child(2)", "class": "info"}]'>Maximum annual pensionable earnings&nbsp;<span class="far fa-question-circle"></span></a></span> 
                                  </li>
  <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
@@ -251,7 +251,7 @@
                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> Result of first part of proration calculation
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> Result of first step of proration calculation
                                     </span></span></li>
 
  <li class="brdr-bttm">
