--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -271,7 +271,7 @@
                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> Result of first part of proration calculation
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> Result of first step of proration calculation
                                     </span></span></li>
 
  <li class="brdr-bttm">
@@ -350,7 +350,7 @@
                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> $126,200 
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> $126,200 is the first step of the proration calculation
                                     </span></span></li>
 
  <li class="brdr-bttm">
