--- a/payroll/calculate/benefit/parking.html
+++ b/payroll/calculate/benefit/parking.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Parking expenses - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Parking - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -86,7 +86,7 @@
 			<a href="what.html#gc-document-nav" class="visible-xs visible-sm">What is a taxable benefit</a>
       </li>
 	  <li>
-      <a href="parking.html" class="active" aria-current="page">Parking expenses</a>
+      <a href="parking.html" class="active" aria-current="page">Parking</a>
     </li>
 	  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -274,7 +274,7 @@
     
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Parking expenses</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Parking</h1>
 
 <div class="alert alert-warning">
 <p>Content has been updated for clarity, completeness and plain language.</p> <p>The changes identified by the tags are effective January 1, 2022 and is identified with:</p><ul><li><span class="label label-info">Update to CRA administrative policy</span></li><li><span class="label label-warning">New CRA administrative policy</span></li></ul>
@@ -314,7 +314,7 @@
   <li class="cnjnctn-col">limited to the same area as the parking provided</li>
   <li class="cnjnctn-col">to comparable parking spots to the one being provided to your employee</li>
 </ul>
-<p>You must consider <strong>all of the facts</strong> relevant to your employee's situation to determine the FMV of the parking expense.</p>
+<p>You must consider <strong>all of the facts</strong> relevant to your employee's situation to determine the best method of re-evaluating the FMV of the parking benefit.</p>
 <p>This determination must be done based on a review of the facts in each specific situation.</p>
 		</div>
 </details>
