--- a/cops/payments-paiements/en/payment-plan.html
+++ b/cops/payments-paiements/en/payment-plan.html
@@ -85,7 +85,7 @@
   <div class="col-lg-4 col-md-6">
         <section>
           <h3><mark><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/when-you-money-collections-cra.html">Collection policies at the CRA</a></mark></h3>
-          <p><mark>Specific information about specialized collection policies that my diverge from typical collection policies (e.g. customs debt has a publication that might have specific information). Could also provide information about how debts are applied (and what might be owed back to the taxpayer that could be applied to other debts).</mark></p>
+          <p><mark>Specific information about specialized collection policies that my diverge from typical collection policies (e.g. customs debt has a publication that might have specific information). Could also provide information about how debts are applied (and what might be owed back to the taxpayer that could be applied to other debts). Also will allow for SEO for "collections CRA" search terms.</mark></p>
         </section>
       </div>
      
