--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
@@ -114,13 +114,13 @@
 <p> You can then pool these expenditures and use them to reduce  your net income for the current year or a future year.</p>
 <h3>Earn an investment tax credit (ITC) </h3>
 <p>You may earn an ITC to reduce your income tax payable for the year.</p>
-<p> Your business may earn an ITC at a basic rate of 15%. Some corporations may claim an ITC at the enhanced rate of 35%.</p>
+<p> Your business may earn the credit at a basic rate of 15%. Some corporations may claim an ITC at the enhanced rate of 35%.</p>
 <p>Some organizations may also earn a refundable ITC.</p>
 
 		 
 <h2 id="h2">Other government funding for R&amp;D</h2>
 		 <p>Other government R&amp;D funding and assistance will not prevent your work from being eligible for SR&amp;ED tax incentives, but they may reduce the amount of ITC you can earn.</p>
-		 <p>For example, if you receive <a href="https://nrc.canada.ca/en/support-technology-innovation/financial-support-technology-innovation-through-nrc-irap">NRC IRAP</a>, it may reduce the amount of investment tax credit you can earn.</p>
+		 <p>For example, if you receive <a href="https://nrc.canada.ca/en/support-technology-innovation/financial-support-technology-innovation-through-nrc-irap">NRC IRAP</a>, it may reduce the amount of ITC you can earn.</p>
 <p>Provincial and territorial R&amp;D tax credits may also be available, although they may reduce the  expenditures you can claim for SR&amp;ED.</p>
 <p>You will need to report any funding or assistance you receive in your SR&amp;ED claim.</p>
 		 <p>To learn more about other government funding and assistance, review:</p>
