--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
@@ -160,7 +160,7 @@
 <p>Experimental development is work that aims to generate  or discover technological knowledge or know-how in order to develop  or improve materials, devices, products, or  processes, including  incremental improvements.</p>
 <details>
   <summary>Example of experimental development</summary>
-  <p>For example, experimental development could occur during the scale up and optimization of processes to enable large scale and rapid production of a vaccine.</p>
+  <p>For example, experimental development could occur during the scale up and optimization of processes to enable large-scale and rapid production of a vaccine.</p>
 </details>
 		 
 		 
