--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/virtual-service-visit.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/virtual-service-visit.html
@@ -83,7 +83,7 @@
             
 <div class="col-md-8">
   <h2>Service summary</h2>
-  <p>The Scientific Research and Experimental  Development (SR&amp;ED) service visit gives eligible  claimants an opportunity to meet with a CRA representative and discuss any  aspect of the SR&amp;ED program. It&rsquo;s a virtual meeting, initiated by the CRA, that is offered to select claimants after their have submitted a claim.</p>
+  <p>The Scientific Research and Experimental  Development (SR&amp;ED) service visit gives eligible  claimants an opportunity to meet with a CRA representative and discuss any  aspect of the SR&amp;ED program. It&rsquo;s a virtual meeting, initiated by the CRA, that is offered to select claimants after they have submitted a claim.</p>
   <p>The service is optional and can help you gain a  better understanding of the SR&amp;ED program&rsquo;s administration and eligibility requirements, and can provide you with advice that is tailored to your needs that can help you with future claims.  </p>
   <h2>What to expect</h2>
   <p>The service is conducted online and can help claimants: </p>
