--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -130,7 +130,7 @@
 
 <details>             
   <summary>Example of an SR&amp;ED project</summary>
-  <p>For example, business is developing a vaccine for a new virus. Some parts of that development work are directly related to resolving an uncertainty, such as not knowing how the virus reacts. </p>
+  <p>For example, a business is developing a vaccine for a new virus. Some parts of that development work are directly related to resolving an uncertainty, such as not knowing how the virus reacts. </p>
   <p>But other parts of the work do not directly relate to resolving the uncertainty, such as marketing the final product.</p>
   <p>Only the activities directly related to resolving the uncertainty, that is, discovering how the virus reacts, would be considered part of the SR&amp;ED project.</p>
 </details>
