--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -217,7 +217,7 @@
     </li>
     <li>    
       <p><strong>Include SR&amp;ED support work</strong>  </p>
-      <p>You may include all support work that matches the needs of and directly supports your basic research, applied research, and experimental development.</p><details>
+      <p>You may include all support work that matches the needs of and directly supports your basic research, applied research, or experimental development.</p><details>
         <summary>Review eligible support work</summary>
         <p>Eligible support work must be in one of the following categories:</p>
         <ul>
