--- a/subway/uht/index-e.html
+++ b/subway/uht/index-e.html
@@ -938,8 +938,8 @@ input[type='radio'] {
 				title: "Taxes",
 				href: "https://www.canada.ca/en/services/taxes.html"
 			    },{
-				title: "Income tax",
-				href: "https://www.canada.ca/en/services/taxes/income-tax.html"
+				title: "Excise and specialty taxes",
+				href: "https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies.html"
 			    },{
 				title: "International and non-resident taxes",
 				href: "https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax.html"
